2007-07-26  Shawn Betts  <sabetts@shitbender.gagrod>

	* configure.ac: check for makeinfo

2007-07-06  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (withdraw-window): raise a new window in the old window's frame.

2007-06-22  Shawn Betts  <sabetts@vcn.bc.ca>

	* primitives.lisp (*top-level-error-hook*): new global

	* stumpwm.lisp (stumpwm-internal-loop): call *top-level-error-hook* when an error occurs.

2007-06-13  Shawn Betts  <sabetts@shitbender.gagrod>

	* stumpwm.lisp (get-next-timeout): don't truncate the value

	* core.lisp (frame-raise-window): raise new window before hiding old ones

2007-05-16  Shawn Betts  <sabetts@vcn.bc.ca>

	* mode-line.lisp (redraw-mode-line-for): change to a defun

	* core.lisp (withdraw-window): unmap the parent window
	(translate-id): remove debug output

2007-05-14  Shawn Betts  <sabetts@vcn.bc.ca>

	* mode-line.lisp (redraw-screen-mode-line): new function
	(redraw-mode-line-for): call redraw-screen-mode-line

2007-05-14  Shawn Betts  <sabetts@shitbender.gagrod>

	* core.lisp (translate-id): add debug output

	* mode-line.lisp (redraw-mode-line-for): add debug output

2007-05-13  Shawn Betts  <sabetts@vcn.bc.ca>

	* mode-line.lisp (mode-line-format-elt): add debugging for :eval

	* stumpwm.lisp (stumpwm): add quit-stumpwm restart. set *package* to *default-package*

	* primitives.lisp (*default-package*): new global

2007-05-12  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (pick-prefered-frame): make sure tile-group-last-frame
	is valid.
	(update-window-border): give non-normal windows a transparent background
	(reparent-window): likewise

	* primitives.lisp (print-object frame): include the frame number
	(*new-window-prefered-frame*): new global variable

	* core.lisp (group-add-window): call pick-prefered-frame
	(pick-prefered-frame): new function
	(restore-window): call pick-prefered-frame
	(restore-window): only focus the new window if it's in the current frame
	(:map-request): likewise